tests/src/frontend/typechecking/invalid/mismatched_variance_unknown_2.sk
base class MyBox<+T>(x: T)
class MyIndexedBox<T> extends MyBox<(Int, T)>

fun no<T>(m: MyBox<T>): void {
  m match {
  | o @ MyIndexedBox _ -> _ = o
  }
}
